# yara-orm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml
benchmarks/: README.md  bench.py  bench_features.py  plot_benchmarks.py  profile_hotpath.py
blog/: dev-to-launch.md
docs/: api-reference.md  architecture.md  contributing.md  index.md  performance.md
docs/backends/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: aggregation.md  custom-fields.md  json-fields.md  manual-sql.md  migrating-from-tortoise.md  migrations.md  models-and-fields.md  multiple-databases.md  querying.md  relations.md  signals.md  testing-factories.md  transactions.md
examples/: basic.py  features.py
promo/: launch-posts.md
python/yara_orm/: __init__.py  __main__.py  _engine.pyi  aggregations.py  connection.py  db_defaults.py  dialects.py  exceptions.py  expressions.py  fields.py  functions.py  manager.py  migrations.py  models.py  prefetch.py  queryset.py  registry.py  relations.py  signals.py  timezone.py  transactions.py  validators.py
python/yara_orm/contrib/: __init__.py  factory.py
python/yara_orm/migrations/: __init__.py  _base.py  diff.py  manager.py  operations.py
rust/src/: engine.rs  error.rs  lib.rs  value.rs
rust/src/backend/: mod.rs  mssql.rs  mysql.rs  oracle.rs  pool.rs  postgres.rs  sqlite.rs
tests/: conftest.py  test_agg_group_by_having.py  test_agg_values_serialization.py  test_aggregation.py  test_array_reverse_json.py  test_audit3_fixes.py  test_audit_connection.py  test_audit_migrations.py  test_audit_models.py  test_audit_queryset.py  test_audit_quickwins.py  test_audit_relations.py  test_audit_values.py  test_backend_parity.py  test_bulk_get_or_create.py  test_cc_bulk_upsert.py  test_cc_crud.py  test_cli.py  test_concurrency.py  test_connection.py  test_contrib_factory.py  test_correctness_regressions.py  test_cov_cli.py  test_cov_connection.py  test_cov_extra.py  test_cov_fields.py  test_cov_final.py  test_cov_final2.py  test_cov_migrations.py  test_cov_models.py  test_cov_queryset.py  test_cov_relations.py  test_create_type_coercion.py  test_crud.py  test_custom_field_kinds.py  test_datetime_tz.py  test_db_defaults.py  test_decimal_and_integrity.py  test_descriptions.py  test_dialects.py  (+68 more)
