[package]
name = "orm-engine"
version = "1.12.0"
edition = "2021"

[lib]
name = "_engine"
crate-type = ["cdylib", "rlib"]
path = "rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "chrono"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
deadpool-postgres = "0.14"
# Pure-Rust TLS (no system OpenSSL / perl, so manylinux wheels build cleanly).
tokio-postgres-rustls = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-native-certs = "0.8"
async-trait = "0.1"
thiserror = "2"
serde_json = "1"
uuid = "1"
chrono = "0.4"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
rust_decimal = { version = "1.42", features = ["db-tokio-postgres"] }
deadpool-sqlite = "0.13.0"
rusqlite = { version = "0.38", features = ["bundled", "column_decltype"] }
# Pure-Rust MySQL driver (ships its own pool). `minimal-rust` keeps the build
# free of C dependencies (rust-backend flate2, no TLS); enable its
# `rustls-tls`/`ring` features if TLS support is wanted later, never native-tls.
mysql_async = { version = "0.37", default-features = false, features = ["minimal-rust"] }

[profile.release]
opt-level = 3
# Fat LTO + a single codegen unit measurably speed up the decode hot paths
# (+7-12% on fetch benchmarks) at the cost of longer release builds. Do not add
# `panic = "abort"`: pyo3 needs unwinding to translate Rust panics into Python
# exceptions.
lto = "fat"
codegen-units = 1
