[package]
name = "orm-engine"
version = "1.13.1"
edition = "2021"

[lib]
name = "_engine"
crate-type = ["cdylib", "rlib"]
path = "rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "chrono"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
deadpool-postgres = "0.14"
# Pure-Rust TLS (no system OpenSSL / perl, so manylinux wheels build cleanly).
tokio-postgres-rustls = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-native-certs = "0.8"
async-trait = "0.1"
thiserror = "2"
serde_json = "1"
uuid = "1"
chrono = "0.4"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
rust_decimal = { version = "1.42", features = ["db-tokio-postgres"] }
deadpool-sqlite = "0.13.0"
rusqlite = { version = "0.38", features = ["bundled", "column_decltype"] }
# Pure-Rust MySQL driver (ships its own pool). `minimal-rust` keeps the build
# free of C dependencies (rust-backend flate2); TLS goes through rustls with
# the ring provider (matching the PostgreSQL stack — never native-tls, so
# wheels stay self-contained). Opt in via URL: `mysql://...?require_ssl=true`.
mysql_async = { version = "0.37", default-features = false, features = [
    "minimal-rust",
    "rustls-tls",
    "ring",
    "tls12",
] }
# Pure-Rust Oracle driver (native TNS protocol; no OCI / ODPI-C / Instant
# Client, so manylinux wheels stay self-contained — the same invariant that
# picked mysql_async over the C drivers). TLS rides the same rustls/ring stack.
# Pinned to a fork of oracle-rs 0.1.7 with fixes yara-orm depends on:
#   - negotiate END_OF_RESPONSE at connect + read multi-packet query responses,
#     so the connection stays in sync and a whole result set comes back in one
#     execute (stock caps every query at the 100-row prefetch) — proposed
#     upstream in stiang/oracle-rs#14;
#   - terminate long-form bind data with a zero-length chunk, so string/bytes
#     binds above 252 bytes no longer drop the connection — stiang/oracle-rs#15.
# The pure-Rust / self-contained-wheel invariant is preserved (no OCI/ODPI-C).
oracle-rs = { git = "https://github.com/vsdudakov/oracle-rs", rev = "2e4b25b3c162ce263fdfd5a70dea9c2a7eff63d6" }
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }

[profile.release]
opt-level = 3
# Fat LTO + a single codegen unit measurably speed up the decode hot paths
# (+7-12% on fetch benchmarks) at the cost of longer release builds. Do not add
# `panic = "abort"`: pyo3 needs unwinding to translate Rust panics into Python
# exceptions.
lto = "fat"
codegen-units = 1
