[build-system]
requires = ["maturin>=1.14.1,<2.0"]
build-backend = "maturin"

[project]
# Distribution name on PyPI is "yara-orm"; the import package is `yara_orm`.
name = "yara-orm"
version = "1.14.3"
description = "Fast async Python ORM with a Rust engine — Tortoise-style models, querysets, relations and migrations for PostgreSQL, MySQL, MariaDB and SQLite"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "yara-orm contributors" }]
keywords = [
    "orm",
    "async",
    "asyncio",
    "database",
    "postgresql",
    "postgres",
    "mysql",
    "mariadb",
    "sqlite",
    "rust",
    "pyo3",
    "tortoise",
    "sqlalchemy",
    "query-builder",
    "migrations",
    "async-orm",
    "high-performance",
]
urls = { Homepage = "https://vsdudakov.github.io/yara-orm/", Repository = "https://github.com/vsdudakov/yara-orm", Documentation = "https://vsdudakov.github.io/yara-orm/", Issues = "https://github.com/vsdudakov/yara-orm/issues" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Framework :: AsyncIO",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0", "factory-boy>=3.3.3"]
factory = ["factory-boy>=3.3.3"]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]
docs = ["mkdocs-material[imaging]>=9.7.6"]

[tool.maturin]
python-source = "python"
module-name = "yara_orm._engine"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["python"]
# Skip generated migration files (NNNN_name.py from `makemigrations`), not the
# library's own migrations package.
extend-exclude = ["[0-9]*_*.py"]

[tool.ruff.lint]
# D = pydocstyle: every public symbol in the library carries a Google-style
# docstring (enforced on `python/` only; relaxed for tests — see below).
select = ["E", "F", "W", "I", "B", "UP", "C4", "D"]
# B008: FastAPI-style defaults n/a here; keep call-in-default for argparse/Path ok.
ignore = ["B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests/benchmarks define ORM models at module scope after imports and keep a
# few intentionally-unused locals for clarity. Docstring rules (D) are relaxed
# there: tests document behaviour with GIVEN/WHEN/THEN bodies, not pydocstyle.
"tests/*" = ["E402", "D"]
"benchmarks/*" = ["E402", "F841", "D"]
"examples/*" = ["E402", "D"]

[tool.ruff.lint.isort]
known-first-party = ["yara_orm"]

[tool.ty.environment]
root = ["./python"]
python-version = "3.9"

[tool.coverage.run]
source = ["yara_orm"]
branch = true
omit = ["*/_engine.pyi"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
    "@abstractmethod",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.basedpyright]
typeCheckingMode = "off"
